[gin] Fire observer after added when recording is in progress.

When run benchmarks on Android, we don't get runtime statistics result because
we register an observer to trigger a flag to enable it, however, tracing is
started before observers are added to observer list in this case, thus we force
to fire observer when we register an observer through platform API when
recording is in progress.

BUG=682167

Review-Url: https://codereview.chromium.org/2650943008
Cr-Commit-Position: refs/heads/master@{#446713}

Former-commit-id: 48e4c328641ba109f490a7375418b5998c4955fb